testdata/baselines/reference/submodule/conformance/symbolDeclarationEmit10.errors.txt
error TS2318: Cannot find global type 'Array'.
error TS2318: Cannot find global type 'Function'.
error TS2318: Cannot find global type 'IArguments'.
error TS2318: Cannot find global type 'RegExp'.
error TS2318: Cannot find global type 'String'.
error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
error TS2552: Cannot find name 'Number'. Did you mean 'number'?
error TS2552: Cannot find name 'Object'. Did you mean 'object'?
symbolDeclarationEmit10.ts(2,10): error TS2304: Cannot find name 'Symbol'.
symbolDeclarationEmit10.ts(3,10): error TS2304: Cannot find name 'Symbol'.


!!! error TS2318: Cannot find global type 'Array'.
!!! error TS2318: Cannot find global type 'Function'.
!!! error TS2318: Cannot find global type 'IArguments'.
!!! error TS2318: Cannot find global type 'RegExp'.
!!! error TS2318: Cannot find global type 'String'.
!!! error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
!!! error TS2552: Cannot find name 'Number'. Did you mean 'number'?
!!! error TS2552: Cannot find name 'Object'. Did you mean 'object'?
==== symbolDeclarationEmit10.ts (2 errors) ====
    var obj = {
        get [Symbol.isConcatSpreadable]() { return '' },
             ~~~~~~
!!! error TS2304: Cannot find name 'Symbol'.
        set [Symbol.isConcatSpreadable](x) { }
             ~~~~~~
!!! error TS2304: Cannot find name 'Symbol'.
    }